Corrected white space in panel title Created RigProperties Component

--- a/src/App.css
+++ b/src/App.css
@@ -30,10 +30,14 @@ code {
 .new-panel-title{
     background-color: #D2E0E6;
     border-bottom: 1px solid grey;
-    padding: 0px 20px;
+    padding: 5px 20px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
+.new-panel-title h4{
+    margin: 0px;
+}
+
 .new-panel-content{
     margin: 10px;
 }
